<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_warning"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/etxt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sample_name"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_key"/>

    <EditText
        android:id="@+id/etxt_answer_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_answer_key"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_questions"/>

    <EditText
        android:id="@+id/etxt_number_of_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_number_of_questions"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_answers"/>

    <EditText
        android:id="@+id/etxt_number_of_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_number_of_answers"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/check_and_save" />

    <Button
        android:id="@+id/btn_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Wybierz klucz" />


</LinearLayout>
